# pyxel-games

./: .gitignore  README.md  pyproject.toml
games/ball_game/: ball_game.html  ball_game.pyxapp  main.py
games/piyo_game/: __main__.py  main.py
